--- a/package.json
+++ b/package.json
@@ -2,30 +2,29 @@
   "name": "@turnkey/stacks",
   "version": "0.1.0-beta.1",
   "description": "Turnkey signer for Stacks blockchain transactions",
-  "type": "module",
   "main": "./dist/index.js",
-  "module": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "default": "./dist/index.mjs"
     }
   },
   "files": [
-    "dist",
-    "src",
-    "README.md",
-    "LICENSE"
+    "dist/",
+    "CHANGELOG.md",
+    "README.md"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --clean",
-    "dev": "tsup src/index.ts --format esm --dts --watch",
-    "typecheck": "tsc --noEmit",
-    "lint": "tsc --noEmit",
-    "test": "vitest",
-    "test:run": "vitest run",
-    "prepublishOnly": "npm run build"
+    "version": "node -p \"'export const VERSION = ' + JSON.stringify(require('./package.json').name + '@' + require('./package.json').version) + ';'\" > src/__generated__/version.ts",
+    "build": "rollup -c",
+    "clean": "rimraf ./dist ./.cache",
+    "typecheck": "tsc -p tsconfig.typecheck.json",
+    "test": "jest --passWithNoTests",
+    "prepublishOnly": "pnpm run clean && pnpm run build"
   },
   "keywords": [
     "turnkey",
@@ -36,31 +35,43 @@
     "stx",
     "web3"
   ],
-  "author": "Turnkey",
+  "author": "Turnkey <hello@turnkey.com>",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tkhq/sdk"
+    "url": "https://github.com/tkhq/sdk",
+    "directory": "packages/stacks"
   },
   "bugs": {
     "url": "https://github.com/tkhq/sdk/issues"
   },
-  "homepage": "https://github.com/tkhq/sdk/tree/main/packages/stacks",
+  "homepage": "https://github.com/tkhq/sdk/tree/main/packages/stacks#readme",
   "engines": {
-    "node": ">=18"
+    "node": ">=18.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "peerDependencies": {
     "@stacks/transactions": "^7.0.0"
   },
   "dependencies": {
-    "@turnkey/http": "^2.0.0"
+    "@turnkey/http": "^2.20.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.0.0",
     "@stacks/transactions": "^7.3.1",
     "@turnkey/sdk-server": "^4.12.2",
+    "@types/jest": "^29.5.0",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^20.0.0",
-    "tsup": "^8.0.0",
-    "typescript": "^5.0.0",
-    "vitest": "^1.0.0"
+    "jest": "^29.7.0",
+    "rimraf": "^6.0.0",
+    "rollup": "^4.0.0",
+    "rollup-plugin-node-externals": "^8.0.0",
+    "ts-jest": "^29.2.0",
+    "typescript": "^5.0.0"
   }
 }
